# CCD

./: README.md
SecureHTTPSWebServer/: Dockerfile  SecureWebserver.md  makefile  root_cert.pem  root_key.pem  secure-websrv_cert.pem  secure-websrv_csr.cnf  secure-websrv_key.pem  secure-websrv_nginx.conf
WindowsSecurityI/: CMakeLists.txt  WindowsSecurityI.md  build.bat
WindowsSecurityI/src/: mylib.cpp  mylibtest.cpp
WindowsSecurityII/: WindowsSecurityII.md
